# LitLens

./: .env.example  .gitignore  CLAUDE.md  README.md  mcp_config.json  pyproject.toml
claude/: langchain_api_reference.md  memory.json  weather_example.md
docs/: agent_role_descriptions.md  analysis_report.md  output_summary.md  sample_interaction_transcript.md
litlens/: __init__.py  main.py
litlens/agents/: arxiv_agent.py  insight_weaver.py  semantic_scholar_agent.py  source_seeker_agent.py
tests/: __init__.py
tests/agents/: __init__.py  test_arxiv_agent.py
