[project]
name = "LitLens"
version = "0.1.0"
description = "Your research agent!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "langchain-community>=0.1.0",
    "mcp[cli]>=1.6.0",
    "uvicorn>=0.29.0",
    "arxiv>=2.1.0",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.0.5",
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
